k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafe
  namespace: cafe
spec:
  selector: { app: cafe }
  ports:
    - port: 80
      targetPort: 8000
